examples/tls-termination/haproxy/ingress-tls-default.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  tls:
  - hosts:
    - foo.bar
  rules:
  - host: foo.bar
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
