examples/tls-termination/haproxy/ingress-tls-foobar.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  tls:
  - hosts:
    - foo.bar
    secretName: foobar-ssl
  rules:
  - host: foo.bar
    http:
      paths:
      - path: /
        backend:
          serviceName: http-svc
          servicePort: 80
